fixed text overflow issue on friends list

--- a/server/static/styles.css
+++ b/server/static/styles.css
@@ -788,6 +788,11 @@ video {
   width: 100%;
 }
 
+.min-w-min {
+  min-width: -moz-min-content;
+  min-width: min-content;
+}
+
 .max-w-screen-xl {
   max-width: 1280px;
 }
@@ -930,6 +935,11 @@ video {
 
 .p-4 {
   padding: 1rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-3 {
